Added a mechanism for generating sequential id's deterministacally based on the existing dataset. This is use full for acceptance tests where id's are stored as requests an in responses.